# UTM-SAD

./: .gitignore  README.md  eta.ipynb  lab2.ipynb  lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  pyproject.toml
multi-stream-vision-app/: README.md  docker-compose.yaml
multi-stream-vision-app/dashboard/: Dockerfile  app.py  requirements.txt
multi-stream-vision-app/video_ingest/: Dockerfile  main.py  requirements.txt
multi-stream-vision-app/vision_processor/: Dockerfile  main.py  requirements.txt
real-time-churn-app/: README.md  docker-compose.yaml  requirements.txt
real-time-churn-app/consumer/: Dockerfile  main.py
real-time-churn-app/dashboard/: Dockerfile  main.py
real-time-churn-app/producer/: Dockerfile  main.py
